--- a/procurement-service/config/procurement-service_config.yml
+++ b/procurement-service/config/procurement-service_config.yml
@@ -8,7 +8,7 @@ stompQueueName: /queue/11830.book.orders
 
 # Procurement Service needs to publish to all topics!
 # FIXME - Replace 99999 with your ID
-stompTopicPrefix: /topic/11830.book.
+stompTopicName: /topic/11830.book.
 
 # TODO: Apollo STOMP Broker URL and login
 apolloUser: "admin"
@@ -20,7 +20,7 @@ apolloPort: 61613
 # HTTP-specific options.
 http:
   # Root Path http://{host}:{port}/xxx
-  rootPath: /*
+  rootPath: /library/*
 
   # The port on which the HTTP server listens for service requests.
   port: 8080
